WIP: trying to get the merge statement to work for tickets

--- a/demo_dbt/models/src_air_travel.yml
+++ b/demo_dbt/models/src_air_travel.yml
@@ -8,3 +8,5 @@ sources:
     tables:
       - name: air_travel
         description: the raw data
+      - name: ticket_updates
+        description: the raw data
